--- a/style.css
+++ b/style.css
@@ -165,3 +165,10 @@ input, textarea {
   border-radius: 4px;
   width: 100%;
 }
+
+footer {
+  text-align: center;
+  margin-top: 2rem;
+  font-size: 0.9rem;
+  color: #777;
+}
