--- a/style.css
+++ b/style.css
@@ -172,3 +172,31 @@ footer {
   font-size: 0.9rem;
   color: #777;
 }
+
+/*Tablet and computer screens*/
+@media (min-width: 600px) {
+  body {
+    padding: 2rem;
+  }
+
+  nav {
+    justify-content: flex-end;
+  }
+
+  #hero h1 {
+    font-size: 2.5rem;
+  }
+
+  section h2 {
+    font-size: 1.6rem;
+  }
+
+  .skills-container {
+    gap: 1rem;
+  }
+
+  .project-card {
+    max-width: 600px;
+    margin: 1rem auto;
+  }
+}
